--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -15,6 +15,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: install dependencies
-        run: pip install -r requirements.txt && apt-get -y install libreoffice
+        run: pip install -r requirements.txt && sudo apt-get -y install libreoffice
       - name: run tests
         run: pytest tests.py
