--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: install dependencies
-        run: pip install -r requirements.txt && sudo apt-get -y install libreoffice
+        run: |
+          sudo apt-get update && sudo apt-get -y install libreoffice \
+          && pip install -r requirements.txt 
       - name: run tests
         run: pytest tests.py
