--- a/.github/workflows/build-upload.yaml
+++ b/.github/workflows/build-upload.yaml
@@ -13,5 +13,15 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: install dependencies
+        env:
+          AWS_ACCESS_KEY_ID: "${{secrets.AWS_ACCESS_KEY_ID}}"
+          AWS_SECRET_ACCESS_KEY: "${{secrets.AWS_SECRET_ACCESS_KEY}}"
         run: |
-          docker build .
+          docker build . \
+          --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID \
+          --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY \
+          --build-arg FLASK_ENV="production"
+
+      - name: push
+        run: |
+          docker push 801176112578.dkr.ecr.us-east-1.amazonaws.com/pdf-backend:latest
