Add docker login

--- a/.github/workflows/build-upload.yaml
+++ b/.github/workflows/build-upload.yaml
@@ -24,4 +24,5 @@ jobs:
 
       - name: push
         run: |
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 801176112578.dkr.ecr.us-east-1.amazonaws.com
           docker push 801176112578.dkr.ecr.us-east-1.amazonaws.com/pdf-backend:latest
