--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     backend:
         environment:
         - LOCAL=1
+        - FLASK_ENV=development
         build: .
         ports:
             - "5000:5000"
